# libcross2d

./: .gitmodules  CMakeLists.txt  README.MD  Targets.cmake  Toolchain.cmake  create_template.sh  libcross2d-logo.xcf
android/: build.gradle  settings.gradle
android/lib/: build.gradle
cmake/: copy_custom.cmake  copy_directory_custom.cmake  mingw_copy_libs.sh  romfs.cmake  targets.cmake  toolchain.cmake
data/common/romfs/: 04b_19.fnt  future.bmfc  future.fnt
data/ps4/scripts/: ps4run.sh
include/: C2D.h  c2d.h
include/3ds/: ctr_input.h  ctr_png.h  ctr_renderer.h  ctr_texture.h
include/cross2d/: c2d.h  c2d_gl1.h  c2d_gl2.h  c2d_sdl1.h  c2d_sdl2.h
include/cross2d/skeleton/: audio.h  audio_buffer.h  cond.h  config.h  config_group.h  config_option.h  config_section.h  device.h  input.h  io.h  mutex.h  object.h  option.h  physicsworld.h  renderer.h  shader_list.h  stb_image.h  stb_image_write.h  texture.h  thread.h  tween.h  utility.h
include/cross2d/widgets/: button.h  configbox.h  gradient_rectangle.h  listbox.h  messagebox.h  progress.h  textbox.h
include/nx/: nx_font.h  nx_io.h  nx_renderer.h  nx_texture.h
include/posix/: posix_clock.h  posix_io.h
include/ps3/: ps3_audio.h  ps3_input.h  tiny3d_font.h  tiny3d_renderer.h  tiny3d_texture.h
include/ps3/tiny3d/: libfont.h  tiny3d.h
include/psp2/: psp2_dirent.h  psp2_font.h  psp2_io.h  psp2_renderer.h  psp2_shaders.h  psp2_texture.h
include/psp2_osmesa/: psp2osmesa_renderer.h
include/psp2_tinygl/: psp2gl_renderer.h  psp2gl_texture.h
include/sdl1/: sdl1_audio.h  sdl1_font.h  sdl1_input.h  sdl1_renderer.h  sdl1_texture.h
include/sdl2/: sdl2_audio.h  sdl2_font.h  sdl2_fontcache.h  sdl2_input.h  sdl2_rectangle.h  sdl2_renderer.h  sdl2_texture.h
include/sfml/: sfml_font.h  sfml_input.h  sfml_renderer.h  sfml_shaders.h  sfml_texture.h
include/skeleton/: audio.h  circle.h  color.h  input.h  io.h  line.h  listbox.h  object.h  rect.h  rectangle.h  renderer.h  renderergl.h  rounded_rectangle.h  shader_list.h  shaders.h  stb_image.h  stb_image_write.h  text.h  textbox.h  texture.h  texturegl.h  timer.h  tween.h  tweener.h  utility.h  vector.h  widget.h
include/skeleton/c2d_sfml/: BlendMode.hpp  Color.hpp  FileInputStream.hpp  Font.hpp  Glyph.hpp  InputStream.hpp  PrimitiveType.hpp  Rect.hpp  Rect.inl  RectangleShape.hpp  SFMLText.hpp  Shape.hpp  String.hpp  String.inl  Text.hpp  Transform.hpp  Transformable.hpp  Utf.hpp  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  Vertex.hpp  VertexArray.hpp
include/skeleton/sfml/: CircleShape.hpp  Clock.hpp  Color.hpp  FileInputStream.hpp  Font.hpp  InputStream.hpp  RectangleShape.hpp  RoundedRectangleShape.h  Shape.hpp  Text.hpp  Time.hpp  Transformable.hpp  Vector3.hpp  VertexArray.hpp
include/skeleton/tweeny/: dispatcher.h  tween.h  tweenone.tcc  tweenpoint.tcc  tweeny.h  (+1 more)
include/widgets/: button.h  listbox.h  messagebox.h  progress.h  textbox.h
res/: default.h
source/3ds/: ctr_font.cpp  ctr_input.cpp  ctr_png.cpp  ctr_renderer.cpp  ctr_texture.cpp
source/debug/: debug_new.cpp
source/nx/: nx_font.cpp  nx_io.cpp  nx_renderer.cpp  nx_texture.cpp
source/posix/: posix_clock.cpp  posix_io.cpp
source/ps3/: ps3_audio.cpp  ps3_input.cpp  tiny3d_font.cpp  tiny3d_renderer.cpp  tiny3d_texture.cpp
source/psp2/: psp2_clock.cpp  psp2_dirent.c  psp2_font.cpp  psp2_io.cpp  psp2_renderer.cpp  psp2_shaders.cpp  psp2_texture.cpp
source/psp2_osmesa/: psp2osmesa_renderer.cpp
source/psp2_tinygl/: psp2gl_renderer.cpp  psp2gl_texture.cpp  vgl.c  vgl.h
source/sdl1/: sdl1_audio.cpp  sdl1_font.cpp  sdl1_input.cpp  sdl1_mesa_renderer.cpp  sdl1_renderer.cpp  sdl1_texture.cpp  sdl1_tinygl_renderer.cpp
source/sdl2/: sdl2_audio.cpp  sdl2_font.cpp  sdl2_fontcache.c  sdl2_input.cpp  sdl2_mesa_renderer.cpp  sdl2_rectangle.cpp  sdl2_renderer.cpp  sdl2_texture.cpp
source/sfml/: sfml_font.cpp  sfml_input.cpp  sfml_renderer.cpp  sfml_shaders.cpp  sfml_texture.cpp
source/skeleton/: audio.cpp  button.cpp  circle.cpp  config.cpp  config_group.cpp  config_option.cpp  config_section.cpp  device.cpp  font.cpp  input.cpp  line.cpp  listbox.cpp  lodepng.cpp  lodepng.cpp.old  messagebox.cpp  object.cpp  option.cpp  physicsworld.cpp  rectangle.cpp  renderer.cpp  renderergl.cpp  rounded_rectangle.cpp  text.cpp  textbox.cpp  texture.cpp  texturegl.cpp  timer.cpp  tween.cpp  tweener.cpp  utility.cpp  widget.cpp
source/widgets/: button.cpp  configbox.cpp  gradient_rectangle.cpp  listbox.cpp  messagebox.cpp  progress.cpp  textbox.cpp
src/: C2D.h  main.cpp  main.h
src/3ds/: ctr_font.cpp  ctr_font.h  ctr_input.cpp  ctr_input.h  ctr_png.cpp  ctr_png.h  ctr_renderer.cpp  ctr_renderer.h  ctr_texture.cpp  ctr_texture.h
src/nx/: nx_font.cpp  nx_font.h  nx_io.cpp  nx_io.h  nx_renderer.cpp  nx_renderer.h  nx_texture.cpp  nx_texture.h
src/posix/: posix_io.cpp  posix_io.h
src/ps3/: ps3_audio.cpp  ps3_audio.h  ps3_input.cpp  ps3_input.h  tiny3d_font.cpp  tiny3d_font.h  tiny3d_renderer.cpp  tiny3d_renderer.h  tiny3d_texture.cpp  tiny3d_texture.h
src/psp2/: psp2_dirent.c  psp2_font.cpp  psp2_font.h  psp2_io.cpp  psp2_io.h  psp2_renderer.cpp  psp2_renderer.h  psp2_shaders.cpp  psp2_shaders.h  psp2_texture.cpp  psp2_texture.h
src/res/: default-20.pgf
src/sdl1/: sdl1_audio.cpp  sdl1_audio.h  sdl1_font.cpp  sdl1_font.h  sdl1_input.cpp  sdl1_input.h  sdl1_renderer.cpp  sdl1_renderer.h  sdl1_texture.cpp  sdl1_texture.h
src/sdl2/: sdl2_audio.cpp  sdl2_audio.h  sdl2_font.cpp  sdl2_font.h  sdl2_fontcache.c  sdl2_input.cpp  sdl2_input.h  sdl2_renderer.cpp  sdl2_renderer.h  sdl2_texture.cpp  sdl2_texture.h
src/sfml/: sfml_font.cpp  sfml_font.h  sfml_input.cpp  sfml_input.h  sfml_renderer.cpp  sfml_renderer.h  sfml_shaders.cpp  sfml_shaders.h  sfml_texture.cpp  sfml_texture.h
src/skeleton/: audio.cpp  audio.h  color.cpp  color.h  font.cpp  font.h  input.cpp  input.h  io.h  rect.h  renderer.cpp  renderer.h  shaders.h  texture.cpp  texture.h  timer.cpp  timer.h  widget.cpp  widget.h
templates/simple/: CMakeLists.txt
templates/simple/src/: app.cpp  app.h  main.cpp
test/: main.cpp  main.h
(+191 files in other folders)
